samples/_failures_safe/1761595757_0becc8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_967bd651.c: In function ‘main’:
./samples/SAFE/__tmp_967bd651.c:144:5: error: expected expression at end of input
  144 |     for (size_t i =
      |     ^~~
./samples/SAFE/__tmp_967bd651.c:144:5: error: expected declaration or statement at end of input
